implements Statics features And search,filter
