# recruitment-automation-system/src/main/java/com/RAS/recruitment_automation_system/joblisting/JobListingController.java
@@ -8,6 +8,12 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.sql.Date;
+import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 @RestController
 @RequestMapping("/jobs")
 @RequiredArgsConstructor
@@ -59,5 +65,26 @@ public class JobListingController {
     }
 
 
+    @GetMapping("/search")
+    public ResponseEntity<PageResponse<JobListingResponse>> searchJobs(
+            @RequestParam(name = "title", defaultValue = "", required = false) String title,
+            @RequestParam(name = "page", defaultValue = "0", required = false) int page,
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
+            @RequestParam(name = "sort", defaultValue = "newest", required = false) String sort) {
+        return ResponseEntity.ok(service.searchJobsByTitle(title, page, size, sort));
+    }
+    @GetMapping("/statistics")
+    public ResponseEntity<Map<String, Long>> getJobStatisticsByDate() {
+        Map<Date, Long> statistics = service.getJobStatisticsByDate();
+
+
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+        Map<String, Long> result = statistics.entrySet().stream()
+                .collect(Collectors.toMap(
+                        entry -> sdf.format(entry.getKey()), // Convertir Date en String
+                        Map.Entry::getValue
+                ));
+        return ResponseEntity.ok(result);
+    }
 
 }
